@@ -21,6 +21,7 @@ export(get.placements)
 export(get.tree)
 export(get.treeinfo)
 export(ggtree)
+export(gplot)
 export(read.jplace)
 export(theme_tree)
 export(theme_tree2)
@@ -45,19 +46,25 @@ importFrom(ggplot2,coord_polar)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
+importFrom(ggplot2,element_text)
 importFrom(ggplot2,fortify)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_text)
+importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_fill_gradient)
 importFrom(ggplot2,scale_x_reverse)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
+importFrom(grid,unit)
+importFrom(gridExtra,grid.arrange)
 importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,add)
 importFrom(magrittr,equals)
 importFrom(methods,show)
+importFrom(reshape2,melt)
