@@ -1,0 +1,26 @@
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/gplot.R
+\name{gplot}
+\alias{gplot}
+\title{view tree and associated matrix}
+\usage{
+gplot(tree, data, low = "green", high = "red", widths = c(0.5, 0.5),
+  font.size = 14)
+}
+\arguments{
+\item{tree}{one of phylo, phylo4 or jplace object}
+
+\item{data}{matrix}
+
+\item{low}{low color}
+
+\item{high}{high color}
+
+\item{widths}{widths of sub plot}
+
+\item{font.size}{font size}
+}
+\description{
+view tree and associated matrix
+}
+
